hphp/test/quick/fc_enum_5.php.expectf

Fatal error: Invalid base type for enum Bar in %s on line 3
